--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
 * {
   box-sizing: border-box;
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
